--- a/biografie.html
+++ b/biografie.html
@@ -8,31 +8,30 @@
 </head>
 <body>
 
-<div class="bara">
-    <a href="./homepage.html">
-        <button>
-            <h1>Homepage</h1>   
-        </button>
-    </a>
-    <a href="./biografie.html">
-        <button >
-            <h1>Biografie</h1>
-        </button>
-    </a>
-    <a href="./picture.html">
-        <button>
-            <h1>Pictures</h1>
-        </button>
-    </a>
-    <a href="./politica.html">
-        <button>
-            <h1>Politica</h1>
-        </button>
-    </a>
-    
-    
-</div>
+    <div class="bara">
+        <a href="./homepage.html">
+            <button>
+                Homepage
+            </button>
+        </a>
+        <a href="./biografie.html">
+            <button >
+                Biografie
+            </button>
+        </a>
+        <a href="./picture.html">
+            <button>
+                Pictures
+            </button>
+        </a>
+        <a href="./politica.html">
+            <button>
+                Politica
+            </button>
+        </a>
+    </div>
 <div class="contetnt">
+    <div class="Total">
     <div class="Imagine">
         <img src="./Imagini/Adolf.webp"/>
     </div>
@@ -57,6 +56,7 @@
         <p>Ca și mulți alți germani din Austria, Hitler a început a dezvolta idei naționaliste germane încă din tinerețe. El și-a exprimat loialitatea doar față de Germania, disprețuind Monarhia Habsburgică care se afla în declin și dominația ei asupra unui imperiu pestriț etnic. Hitler și prietenii săi foloseau salutul "Heil" și cântarea "Deutschlandlied" în loc de imnul imperial austriac.</p>
         <p>După decesul neașteptat al lui Alois, pe 3 ianuarie 1903, succesul lui Hitler la școală s-a deteriorat și mama sa i-a permis să plece. El s-a înscris în Realschule din Steyr în septembrie 1904, unde comportamentul și performanțele sale au prezentat unele îmbunătățiri. În 1905, după ce a susținut repetat examenul final, Hitler a părăsit școala fără ambiții de continuare a studiilor sau planuri clare pentru o carieră.</p>
     </div>
+</div>
 </div>
 
 </body>
