--- a/homepage.html
+++ b/homepage.html
@@ -7,29 +7,28 @@
 <link rel="stylesheet" type="text/css" href="./CSS/bara.css">
 </head>
 <body>
-<div class="container-fluid">
+
 <div class="bara">
     <a href="./homepage.html">
         <button>
-            <h1>Homepage</h1>   
+            Homepage
         </button>
     </a>
     <a href="./biografie.html">
         <button >
-            <h1>Biografie</h1>
+            Biografie
         </button>
     </a>
     <a href="./picture.html">
         <button>
-            <h1>Pictures</h1>
+            Pictures
         </button>
     </a>
     <a href="./politica.html">
         <button>
-            <h1>Politica</h1>
+            Politica
         </button>
     </a>
-    
 </div>
 
     <div class="contetnt">
@@ -37,6 +36,6 @@
         <h2> 20 aprilie 1889 -  30 aprilie 1945</h2>
         <p>Site pentru lucrarea de atestat</p>
     </div>
-</div>
+
 </body>
 </html>
