--- a/picture.html
+++ b/picture.html
@@ -9,109 +9,138 @@
 
 <body>
 <div class="container-fluid">
-<div class="bara">
-    <a href="./homepage.html">
-        <button>
-            <h1>Homepage</h1>   
-        </button>
-    </a>
-    <a href="./biografie.html">
-        <button >
-            <h1>Biografie</h1>
-        </button>
-    </a>
-    <a href="./picture.html">
-        <button>
-            <h1>Pictures</h1>
-        </button>
-    </a>
-    <a href="./politica.html">
-        <button>
-            <h1>Politica</h1>
-        </button>
-    </a>
-</div>
+    <div class="bara">
+        <a href="./homepage.html">
+            <button>
+                Homepage
+            </button>
+        </a>
+        <a href="./biografie.html">
+            <button >
+                Biografie
+            </button>
+        </a>
+        <a href="./picture.html">
+            <button>
+                Pictures
+            </button>
+        </a>
+        <a href="./politica.html">
+            <button>
+                Politica
+            </button>
+        </a>
+    </div>
+
 <div class="contetnt">
     <div class="pair">
         <div class="pic">
-            <img src="./Paintings/P1.jpg">
+            <img src="./Paintings/TheFence.jpg">
+            <span class="numePoza">The Fence</span>
         </div>
         <div class="pic">
-            <img src="./Paintings/P2.jpg">
+            <img src="./Paintings/WinterClockTower.jpg">
+            <span class="numePoza">WInter Clock Tower</span>
+
         </div>
     </div>
     <div class="pair">
         <div class="pic">
-            <img src="./Paintings/P3.jpg">
+            <img src="./Paintings/Self Portrait.jpeg">
+            <span class="numePoza">Self Portrait</span>
+
         </div>
         <div class="pic">
-            <img src="./Paintings/P4.jpg">
+            <img src="./Paintings/House at a Lake with Mountains.jpg">
+            <span class="numePoza">House at a Lake with Mountains</span>
+
         </div>
     </div>
     <div class="pair">
         <div class="pic">
-            <img src="./Paintings/P5.jpg">
+            <img src="./Paintings/Standesamt.jpg">
+            <span class="numePoza">Standesamt</span>
+
         </div>
         <div class="pic">
-            <img src="./Paintings/P6.webp">
+            <img src="./Paintings/Maison Du Dr. Bloch.jpg">
+            <span class="numePoza">Maison Du Dr. Bloch</span>
+
         </div>
     </div>
     <div class="pair">
         <div class="pic">
-            <img src="./Paintings/P7.webp">
+            <img src="./Paintings/Vienna State Opera House.jpg">
+            <span class="numePoza">Vienna State Opera House</span>
+
         </div>
         <div class="pic">
-            <img src="./Paintings/P8.jpg">
+            <img src="./Paintings/Ruin of a Monestery in Mesen.jpg">
+            <span class="numePoza">Ruin of a Monestery in Mesen</span>
+
         </div>
     </div>
     <div class="pair">
         <div class="pic">
-            <img src="./Paintings/P9.jpg">
+            <img src="./Paintings/Fromelles.jpg">
+            <span class="numePoza">Fromelles</span>
+
         </div>
         <div class="pic">
-            <img src="./Paintings/P10.JPG">
+            <img src="./Paintings/Tree at a Track.jpg">
+            <span class="numePoza">Tree at a Track</span>
+
         </div>
     </div>
     <div class="pair">
         <div class="pic">
-            <img src="./Paintings/P11.jpg">
+            <img src="./Paintings/Mother Mary with the Holy Child Jesus Christ.jpg">
+            <span class="numePoza">Mother Mary with the Holy Child Jesus Christ</span>
+
         </div>
         <div class="pic">
-            <img src="./Paintings/P12.JPG">
+            <img src="./Paintings/Opera De Vienne.jpg">
+            <span class="numePoza">Opera De Vienne</span>
+
         </div>
     </div>
     <div class="pair">
         <div class="pic">
-            <img src="./Paintings/P13.webp">
+            <img src="./Paintings/Arda In Flanders.jpg">
+            <span class="numePoza">Arda In Flanders</span>
+
         </div>
         <div class="pic">
-            <img src="./Paintings/P14.jpg">
+            <img src="./Paintings/Fromelless.jpg">
+            <span class="numePoza">Fromelless</span>
+
         </div>
     </div>
     <div class="pair">
         <div class="pic">
-            <img src="./Paintings/P15.jpg">
+            <img src="./Paintings/House With White Fence.jpg">
+            <span class="numePoza">House With White Fence</span>
+
         </div>
         <div class="pic">
-            <img src="./Paintings/P16.jpg">
+            <img src="./Paintings/Vase with Flowers.jpg">
+            <span class="numePoza">Vase with Flowers</span>
+
         </div>
     </div>
     <div class="pair">
         <div class="pic">
-            <img src="./Paintings/P17.jpg">
+            <img src="./Paintings/Halaman Rumah Tua Di Munchen.jpg">
+            <span class="numePoza">Halaman Rumah Tua Di Munchen</span>
+
         </div>
         <div class="pic">
-            <img src="./Paintings/P18.jpg">
+            <img src="./Paintings/Abris A Fournes.jpg">
+            <span class="numePoza">Abris A Fournes</span>
+
         </div>
     </div>
-    <div class="pair">
-        <div class="pic">
-            <img src="./Paintings/P19.jpg">
-        </div>
-        <div class="pic">
-            <img src="./Paintings/P20.webp">
-        </div>
-    </div>
+
 </div>
 </div>
 </body>
